Bug 424601 - Brush with long name is doomed
Summary: Brush with long name is doomed
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: 4.3.0
Platform: Microsoft Windows Microsoft Windows
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-24 09:16 UTC by asaf
Modified: 2020-08-08 13:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (170.14 KB, image/jpeg)
2020-07-24 09:16 UTC, asaf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description asaf 2020-07-24 09:16:37 UTC
Created attachment 130361 [details]
screenshot

SUMMARY
Cannot rename/save brush that has really long name.

STEPS TO REPRODUCE
1. have a brush name really long.
2. Click on the "Edit brush settings" button, in order to rename it.

OBSERVED RESULT
The pop up is wider than the screen, and the rename icon/ save / override buttons are located outside of the screen. This brush is doomed.

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Halla Rempt 2020-07-24 09:18:54 UTC
We probably should make this a squeezed text label. But it's not a major issue of course.
Comment 2 asaf 2020-07-24 09:21:42 UTC
(In reply to Boudewijn Rempt from comment #1)
> We probably should make this a squeezed text label. But it's not a major
> issue of course.

Is there a work-around? Can I rename it in any other way?
Comment 3 wolthera 2020-08-08 13:03:14 UTC
Git commit a9b43876b731a3a551c6e398592a2d338c44c2c9 by Wolthera van Hövell tot Westerflier.
Committed on 08/08/2020 at 13:03.
Pushed by woltherav into branch 'master'.

Elide very long brush names

This also removes the spacer there, which doesn't seem to make a huge difference
but is necessary because otherwise the label doesn't take up the useful space.

M  +1    -14   libs/ui/forms/wdgpaintopsettings.ui
M  +2    -0    libs/ui/widgets/kis_paintop_presets_popup.cpp

https://invent.kde.org/graphics/krita/commit/a9b43876b731a3a551c6e398592a2d338c44c2c9
Comment 4 wolthera 2020-08-08 13:05:49 UTC
Git commit 787c8a0120ea4d2678b25ceaeef4be67048f2579 by Wolthera van Hövell tot Westerflier.
Committed on 08/08/2020 at 13:05.
Pushed by woltherav into branch 'krita/4.3'.

Elide very long brush names

This also removes the spacer there, which doesn't seem to make a huge difference
but is necessary because otherwise the label doesn't take up the useful space.

M  +1    -14   libs/ui/forms/wdgpaintopsettings.ui
M  +2    -0    libs/ui/widgets/kis_paintop_presets_popup.cpp

https://invent.kde.org/graphics/krita/commit/787c8a0120ea4d2678b25ceaeef4be67048f2579