Elide very long brush names

This also removes the spacer there, which doesn't seem to make a huge difference
but is necessary because otherwise the label doesn't take up the useful space.

BUG:424601